# rccae

./: README.md  run_rccae.sh
cae/: autoencoder.py  clustering.py  genomedata.py  train.py
data/: example.txt  lrc_example.txt
hmm/: Forward_Backward_Algorithm.c  Forward_Backward_Algorithm.mexa64  Forward_Backward_Algorithm.mexw64  SCHMM  SCHMM.m  SCHMM_EM_Newton.m  SCHMM_estimate_paras.m  SCHMM_eval_pdf_lrc.m  SCHMM_get_obslik.m  SCHMM_load_data.m  SCHMM_main.m  SCHMM_plot  SCHMM_plot.m  SCHMM_process_results.m  SCHMM_screening.m  SCHMM_segment_results.m  em_converged_m.m  example.m  norm_trans.m  run_SCHMM.sh  run_SCHMM_plot.sh  schmm_plot_readme.txt  schmm_readme.txt
prep/: CMakeLists.txt  README.md
prep/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
prep/lib/bamtools/src/api/: BamAlignment.cpp~  BamAux.h  BamReader.h  BamWriter.cpp  BamWriter.h
prep/lib/config/: Config.cpp  Config.h
prep/lib/genomedata/: GenomeData.cpp  GenomeData.h
prep/lib/inputparser/: InputParser.cpp  InputParser.h
prep/lib/matrix/: Matrix.h
prep/lib/mydefine/: MyDefine.cpp  MyDefine.h
prep/src/: prepInput.cpp
